--- a/Viagens/style.css
+++ b/Viagens/style.css
@@ -13,7 +13,7 @@
 
 .box1{
 
-  background:url(/img/dream_TradingCard\ \(8\).jpg);
+  background:url(img/dream_TradingCard\ \(8\).jpg);
   background-repeat: no-repeat;
   background-size: 550px;
   background-position: 0%;
