--- a/intro-section-with-dropdown-navigation-main/assets/css/mobile.css
+++ b/intro-section-with-dropdown-navigation-main/assets/css/mobile.css
@@ -5,6 +5,10 @@
   font-family: 'Epilogue', sans-serif;
 }
 
+body {
+  background-color: rgb(240, 240, 240);
+}
+
 .header {
   padding: 10px;
   padding-bottom: 25px;
