--- a/ultraWeb/assets/css/ofertas.css
+++ b/ultraWeb/assets/css/ofertas.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: AllerStdBold;
-  src: url(./fonts/Aller-Bold-Italic/Aller_Std_Bd.ttf);
+  src: url(../../fonts/Aller-Bold-Italic/Aller_Std_Bd.ttf);
 }
 
 body {
@@ -116,42 +116,4 @@ html {
 
 .divisor img {
   transform: scale(110%);
-}
-
-footer.nav {
-  position: fixed;
-  bottom: 0;
-  width: 100vw;
-  height: 35px;
-  background: linear-gradient(to bottom, rgba(232, 236, 230, 0.095) 0%, #f1f1f1dc 54.06%);
-  filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.071));
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  column-gap: 5px;
-}
-
-footer img {
-  padding-left: 10px;
-}
-
-footer a {
-
-  font-family: AllerStd;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 600;
-  color: black;
-}
-
-
-footer a:visited {
-  color: black;
-  text-decoration: none;
-  background-color: inherit;
-}
-
-footer a:active {
-  border-radius: 20px;
-  background-color: white;
 }
