--- a/ultraWeb/assets/css/selenio.css
+++ b/ultraWeb/assets/css/selenio.css
@@ -1,21 +1,21 @@
 @font-face {
   font-family: AllerBoldIt;
-  src: url(./fonts/Aller-Bold-Italic/Aller_Std_BdIt.ttf);
+  src: url(../../fonts/Aller-Bold-Italic/Aller_Std_BdIt.ttf);
 }
 
 @font-face {
   font-family: AllerStdBold;
-  src: url(./fonts/Aller-Bold-Italic/Aller_Std_Bd.ttf);
+  src: url(../../fonts/Aller-Bold-Italic/Aller_Std_Bd.ttf);
 }
 
 @font-face {
   font-family: AllerStd;
-  src: url(./fonts/Aller-Bold-Italic/Aller_Std_Lt.ttf);
+  src: url(../../fonts/Aller-Bold-Italic/Aller_Std_Lt.ttf);
 }
 
 @font-face {
   font-family: AllerDisplay;
-  src: url(./fonts/Aller-Bold-Italic/AllerDisplay_Std_Rg.ttf);
+  src: url(../../fonts/Aller-Bold-Italic/AllerDisplay_Std_Rg.ttf);
 }
 
 * {
@@ -52,7 +52,7 @@ header {
   /* display: flex; */
   width: 100vw;
   height: 200px;
-  background: url(./img/selenioProductBgPg.png);
+  background: url(../img/selenioProductBgPg.png);
   background-size: cover;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
 }
