splash screen pwa

--- a/ultraWeb/assets/css/index.css
+++ b/ultraWeb/assets/css/index.css
@@ -47,7 +47,7 @@ html {
 }
 
 body {
-  background-image: url(../img/gramaFundo.jpg);
+  background-image: url(../img/gramaFundo.webp);
   background-size: 100%;
   background-position: center;
   width: 100vw;
