--- a/ultraWeb/assets/css/ultracaps.css
+++ b/ultraWeb/assets/css/ultracaps.css
@@ -103,7 +103,7 @@ body {
   align-items: center;
   flex-direction: column;
   border-radius: 40px 40px 0px 0px;
-  background: linear-gradient(180deg, #0056BA 0%, rgba(0, 86, 186, 0.00) 55%);
+  background: linear-gradient(180deg, #0056ba 0%, rgba(0, 86, 186, 0.00) 55%);
   overflow-y: scroll;
   overflow-x: hidden;
   row-gap: 10px;
