--- a/ultraWeb/assets/css/selenio.css
+++ b/ultraWeb/assets/css/selenio.css
@@ -29,6 +29,20 @@ html {
   font-size: 14px;
   font-family: AllerStd;
   font-weight: 400;
+  -webkit-tap-highlight-color: transparent;
+  font-size: 12px;
+  -webkit-animation: fadein 2s;
+
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 body {
