--- a/ultraWeb/assets/css/index.css
+++ b/ultraWeb/assets/css/index.css
@@ -20,7 +20,6 @@
 
 * {
   font-family: AllerBoldIt;
-
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -30,7 +29,7 @@
 }
 
 html {
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: none;
   font-size: 12px;
   -webkit-animation: fadein 2s;
 
@@ -59,6 +58,14 @@ body {
   overflow-y: scroll;
 }
 
+header {
+  position: relative;
+  width: 90vw;
+  height: 140px;
+  margin-bottom: 90px;
+  display: flex;
+  justify-content: center;
+}
 
 .header {
   width: 65vw;
@@ -68,11 +75,29 @@ body {
   box-shadow: 6px 6px 15px 10px rgba(0, 0, 0, 0.422);
   text-align: center;
   font-weight: 600;
-  padding-top: 10px;
-  margin-bottom: 90px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+
+  position: absolute;
+  top: -180px;
+
+  animation-name: queda-header;
+  animation-duration: 3s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes queda-header {
+  from {
+    top: -180px;
+  }
+
+  to {
+    top: 0px;
+  }
 }
 
 .firstText,
@@ -94,12 +119,17 @@ body {
   font-size: 3em;
 }
 
+.logoTextUltra {
+  transform: scale(140%);
+  filter: drop-shadow(1px 1px 10px rgba(0, 0, 0, 0.445));
+}
+
 .logoUltra {
   width: 100px;
-  /* position: absolute;
-  left: 51%; */
-  /* transform: translate(-50%, 10%); */
-  filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.418));
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 85%);
+  filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.118));
 }
 
 .options {
@@ -147,7 +177,7 @@ a:active {
   padding-left: 5px;
   border-radius: 0px 10px 5px 0px;
   background-color: #0056BA;
-  filter: drop-shadow(5px 5px 15px black);
+  filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.651));
 }
 
 
@@ -166,7 +196,7 @@ a:active {
   padding-left: 5px;
   border-radius: 0px 10px 5px 0px;
   background-color: #0056BA;
-  filter: drop-shadow(5px 5px 15px black);
+  filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.651));
 }
 
 .carrousel {
@@ -192,7 +222,7 @@ a:active {
   height: 170px;
   border-radius: 10px;
   padding: 12px;
-  box-shadow: 0px 1.5px 5px 5px rgba(0, 0, 0, 0.468);
+  box-shadow: 0px 1px 5px 5px rgba(0, 0, 0, 0.264);
 }
 
 .cardUltra {
@@ -207,9 +237,8 @@ a:active {
 
 .cardContent {
   display: flex;
-  /* border: 3px solid red; */
   height: 100vh;
-  column-gap: 10px;
+  /* column-gap: 10px; */
 }
 
 .cardImg {
@@ -241,7 +270,12 @@ a:active {
 
 }
 
-.cardText .viventeImg {
+.cardText .ultracapsLogoCard {
+  filter: drop-shadow(1px 1px 10px rgba(0, 0, 0, 0.537));
+}
+
+.cardText .viventeLogoCard {
+  transform: scale(120%);
   filter: drop-shadow(1px 1px 10px rgba(0, 0, 0, 0.444));
 }
 
@@ -264,23 +298,28 @@ a:active {
 }
 
 .cardText .cardTextVivente {
-  color: #626262;
-  letter-spacing: 1.5px;
-  font-size: 11px;
-  padding-top: 15px;
+  color: #545454;
+  letter-spacing: 1px;
+  padding-top: 20px;
+  font-size: 13px;
+  /* background-color: rgba(128, 128, 128, 0.141); */
 
 }
 
 .button {
-  background-color: transparent;
   position: absolute;
-  bottom: 10px;
+  bottom: 0;
   left: 50%;
   transform: translateX(-90%);
   width: 92px;
-  border-radius: 7px;
-  text-align: center;
+  height: 30px;
+  border-radius: 10px 10px 0px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
 }
+
 
 .button a {
   font-family: AllerStdBold;
@@ -296,21 +335,16 @@ a:active {
   background: linear-gradient(180deg, #FFF 0%, #80b3ff 99.47%);
 }
 
+
 .btnVivente {
   background: linear-gradient(180deg, #FFF 0%, #FFF7CF 99.47%);
 }
 
 
-footer.nav {
+/* footer.nav {
+  background-color: #80b3ff;
+  height: 50px;
+  width: 100vw;
   position: fixed;
   bottom: 0;
-  width: 100vw;
-  /* height: 100vh; */
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.51) 97.4%);
-  display: flex;
-  justify-content: space-around;
-}
-
-footer img {
-  filter: drop-shadow(1px 1px 10px black);
-}
+} */
