--- a/ultraWeb/assets/css/ultracaps.css
+++ b/ultraWeb/assets/css/ultracaps.css
@@ -29,9 +29,8 @@
 html {
   -webkit-tap-highlight-color: transparent;
   font-size: 12px;
-  -webkit-animation: fadein 2s;
-
 }
+
 
 @-webkit-keyframes fadein {
   from {
@@ -50,13 +49,19 @@ body {
   row-gap: 30px;
   min-height: 100vh;
   overflow-x: hidden;
+}
 
-
+header {
+  width: 255px;
+  height: 90px;
+  background-color: transparent;
+  margin-top: 50px;
+  margin-bottom: 25px;
 }
 
 .header {
-  margin-top: 50px;
-  margin-bottom: 25px;
+  position: absolute;
+  left: -255px;
   width: 255px;
   height: 90px;
   border-radius: 0px 15px 5px 0px;
@@ -66,6 +71,20 @@ body {
   justify-content: center;
   align-items: center;
 
+  animation-name: abertura-header;
+  animation-fill-mode: forwards;
+  animation-duration: 2s;
+
+}
+
+@keyframes abertura-header {
+  from {
+    left: -255px;
+  }
+
+  to {
+    left: 0;
+  }
 }
 
 .header img {
@@ -76,12 +95,31 @@ body {
 
 }
 
-.bannerText {
+.banner {
   height: 95px;
   width: 100vw;
-  /* border: 2px solid black; */
-
 }
+
+.bannerText {
+  position: absolute;
+  height: 95px;
+  width: fit-content;
+  right: -300px;
+  animation-name: abertura-banner;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes abertura-banner {
+  from {
+    right: -300px;
+  }
+
+  to {
+    right: 110px;
+  }
+}
+
 
 .bannerText p {
   font-family: AllerDisplay;
@@ -124,6 +162,8 @@ body {
   overflow-y: scroll;
   overflow-x: hidden;
   row-gap: 10px;
+
+  animation: fadein 3s;
 
 
 }
