--- a/ultraWeb/assets/css/index.css
+++ b/ultraWeb/assets/css/index.css
@@ -83,6 +83,8 @@ header {
 
   position: absolute;
 
+  will-change: transform;
+
   animation-name: queda-header;
   animation-duration: 3s;
   animation-timing-function: ease-out;
@@ -309,7 +311,7 @@ a:active {
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translateX(-90%);
+  transform: translateX(-105%);
   width: 92px;
   height: 30px;
   border-radius: 10px 10px 0px 0px;
